--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.swp
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -109,6 +110,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+yt_chapters_venv/
 
 # Spyder project settings
 .spyderproject
